# BasicEncryption

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: encryption.cpp  encryption.h  headers.h  interface.cpp  interface.h  main.cpp
